--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -20,7 +20,9 @@
 }
 
 body {
-  background: var(--background);
+  background: #fafafa;
+  /*var(--background);*/
+  /*#f4f4f4*/
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
